Openllet,DLEJena2/openllet/output_ApacheMaven_openllet2.6.3_mvnrepository_MultipleJars/OWLAPIExample2_compile.txt
openllet\examples\OWLAPIExample2.java:74: error: incompatible types: OWLReasoner cannot be converted to OpenlletReasoner
		final OpenlletReasoner r = h.getReasoner();
		                                        ^
1 error
